src/scss/ui/components/LostActionsDivGen.scss
.Testing {
    display: flex;
    flex-direction: column;
    background-color: #444444;
    border-radius: 12px;
    width: 380px;
    margin: 0px;
    padding: 0px;
    color: white;
    box-shadow: 0px 0px 4px black;
    border: 1px solid black;
}

.TestingActionEncompass {
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 5px;
    border-radius: 12px;
    margin-top: 10px;
}

/*.TestingGradient {
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    background: linear-gradient(#6d6d6d, #444444);
    height: 12px;
    width: 370px;
    
}*/

.Testing1 {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 50px;
   
    img {
        height: 50px;
    }

    .Testing1Inner1 {
        display: flex;
        flex-direction: row;
        width: 50%;
        align-items: center;
        
        
        p {
            margin: 0px;
            padding: 5px 0px;
        }

        p:last-of-type {
            padding-bottom: 0px;
            margin-top: -7px;
        }

        .Testing1Inner1Inner {
            padding-left: 10px;
            align-items: start;
            height: 100%;
            display: flex;
            flex-direction: column;
            margin-top: -5px;

            .TestingActionName {
                font-size: 20px;
            }
        }
    }


    .Testing1Inner2 {
        display: flex;
        flex-direction: row;
        width: 50%;
        padding-bottom: 2px;
        justify-content: center;
        align-items: end;
        height: 100%;
        margin-top: -2px;
        
        .Testing1Inner2Inner1 {
            width: 50%;
            padding-left: 10px;
            
            span {
                color: #959595;
            }
        }

        .Testing1Inner2Inner2 {
            width: 50%;

            span {
                color: #959595;
            }
            
        }

    }
}

.Testing2 {
    display: flex;
    flex-direction: row;
    text-align: end;
    height: 45px;
    margin-bottom: 5px;

    .TestingText {
        margin: 1px 0px;
        margin-bottom: 5px;
        color: #b7b2a1;
    }
    
    .TestingText2 {
        transform: scaleY(1.5);
        margin: 1px 0px;
    }


    .Testing2Inner1 {
        width: 33%;
    }

    .Testing2Inner2 {
        width: 33%;
    }

    .Testing2Inner3 {
        width: 33%;
    }
}

.Testing3 {
    margin-bottom: 5px;
}

.Testing4 {
    display: flex;
    flex-direction: row;

    .Testing4Inner1 {
        width: 25%;
    }

    .Testing4Inner2 {
        width: 75%;
        font-size: 13px;
    }
}


.SeparatorDiv {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin: 0px 0px;
    margin-bottom: 4px;
}

.TestingUpperSeparator {
    height: 2px;
    background-color: white;
    width: 95%;
}
.TestingSeparator {
    height: 2px;
    background-color: black;
    width: 95%;
    margin: 0px;
    padding: 0px;
}

.TestingImage {
    margin-top: 5px;
}





.TestingActionCat {
    color: #b7b2a1;
}

